--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,8 +8,8 @@
         "ms-toolsai.jupyter",
         "ms-toolsai.jupyter-keymap",
         "ms-toolsai.jupyter-renderers",
-        "ms-toolsai.vscode-jupyter-cell-tags",
-        "ms-toolsai.vscode-jupyter-slideshow",
         "tamasfe.even-better-toml",
+        "charliermarsh.ruff",
+        "editorconfig.editorconfig",
     ]
 }
